<resources>
    <string name="app_name">Password</string>

    <string name="username">用户名</string>
    <string name="password">请输入密码</string>
    <string name="rePassword">请重复密码</string>
    <string name="Confirm">确定</string>
    <string name="wrongPw">密码错误</string>

    <string name="chip_personal">个人</string>
    <string name="chip_work">工作</string>
    <string name="chip_social">社交</string>
    <string name="chip_fiance">金融</string>
    <string name="chip_education">教育</string>
    <string name="chip_entertainment">娱乐</string>
    <string name="chip_game">游戏</string>
    <string name="chip_other">其他</string>
    <string name="chip_option">选项</string>
    <string name="chip_mima">密码</string>
</resources>
