<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="isLoading"
            type="boolean" />
    </data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chip_option"
        android:layout_margin="@dimen/item_main_margin"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipInGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/item_main_margin"
        app:chipSpacing="@dimen/item_chipSpacing"
        app:singleSelection="true"
        >

        <com.google.android.material.chip.Chip
            android:id="@+id/chipInGroup_personal"
            style="@style/Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_personal"
            android:textAppearance="?android:textAppearanceMedium"
            app:closeIconVisible="false"
            app:chipIconVisible="true"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipInGroup_work"
            style="@style/Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_work"
            android:textAppearance="?android:textAppearanceMedium"
            app:closeIconVisible="false"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipInGroup_social"
            style="@style/Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_social"
            android:textAppearance="?android:textAppearanceMedium"
            app:closeIconVisible="false"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipInGroup_fiance"
            style="@style/Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_fiance"
            android:textAppearance="?android:textAppearanceMedium"
            app:closeIconVisible="false"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipInGroup_education"
            style="@style/Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_education"
            android:textAppearance="?android:textAppearanceMedium"
            app:closeIconVisible="false"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipInGroup_entertainment"
            style="@style/Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_entertainment"
            android:textAppearance="?android:textAppearanceMedium"
            app:closeIconVisible="false"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipInGroup_game"
            style="@style/Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_game"
            android:textAppearance="?android:textAppearanceMedium"
            app:closeIconVisible="false"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipInGroup_other"
            style="@style/Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_other"
            android:textAppearance="?android:textAppearanceMedium"
            app:closeIconVisible="false"
            />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chip_mima"
        android:layout_margin="@dimen/item_main_margin"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/keys_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="LinearLayoutManager"
        app:visibleGone="@{!isLoading}"/>
</LinearLayout>
</layout>